syntax = "proto3";

package trafficLight;

service trafficLight{
  // A simple RPC.
  // Obtains the MessageResponse at a given position.
 rpc GetServerResponse(Message) returns (MessageResponse) {}
}

service controller{
  //service for traffic lights to controller
  rpc trafficLightToController(Message) returns (MessageResponse){}
  //service for controller to traffic lights
  rpc controllerToTrafficLight(Message) returns (MessageResponse){} 
  //service for controller to LTA
  rpc controllerToLTA(Message) returns (MessageResponse){} 
  //service for LTA to controller
  rpc LTAToController(Message) returns (MessageResponse){} 
}

message Message{
 string message = 1;
}

message MessageResponse{
 string message = 1;
 bool received = 2;
}